│ Creates only Observable             │Can create and also listen Observable│
│ ( data producer alone )             │ ( data producer and consumer )      │
├─────────────────────────────────────┼─────────────────────────────────────┤
│ Usage: Simple Observable with only  │ Usage:                              │
│ one Obeserver.                      │ * Store data and modify frequently  │
│                                     │ * Multiple observers listen to data │
│                                     │ * Proxy between Observable  and     │
│                                     │   Observer                          │
└─────────────────────────────────────┴─────────────────────────────────────┘

7- implement of deletion and main photo settings and the usage of localhost to store user along with its token
8- showing also the thumbnail picture as an icone along with the name of logged in user and sync of all photos 
    when they change to main photo.



-----------------------------------------------------------------------------
Expanding register form
-----------------------------------------------------------------------------
1 - use of reactive form and validation, better that template form approach, it keeps html clean
2 - adding customs validation such as confirm password
3 - date PB: date type  (datepicker) is not implemented and it's up the browser to implement this, some browser
    doesn't implement this and we need to keep a uniform UI browser wide!, see more : https://caniuse.com/
4- adding a default user photo from asset in case there isn't any.

-----------------------------------------------------------------------------
Date formating : Memeber since & Last Active
-----------------------------------------------------------------------------
1 - use of {{user.created|date:'mediumDate'}}
2 - use of {{user.lastActive|timeAgo}} more see: https://www.npmjs.com/package/time-ago-pipe  