@@ -1,7 +1,55 @@
+<div class="container mb-5">
+  <div class="text-center mt-3">
+    <h2>Your matches - {{pagination.totalItems}} found</h2>
+  </div>
+  <form #form="ngForm" class="form-inline" (ngSubmit)='loadUser()' novalidate>
+    <div class="form-group">
+      <label for="minAge">Age From</label>
+      <input type="number" class="form-control ml-1" [(ngModel)]="userParams.minAge" style="width: 70px" id="minAge"
+        name="minAge">
+    </div>
+
+    <div class="form-group px-2">
+      <label for="maxAge">Age To</label>
+      <input type="number" [(ngModel)]="userParams.maxAge" class="form-control ml-1" style="width: 70px" id="maxAge"
+        name="maxAge">
+    </div>
+
+    <div class="form-group px-2">
+      <label for="gender">Show: </label>
+      <select class="form-control ml-1" style="width: 130px" id="gender" name="gender" [(ngModel)]="userParams.gender">
+        <option *ngFor="let gender of genderList" [value]='gender.value'> {{gender.dispaly}}
+        </option>
+      </select>
+    </div>
+    <button type="submit" class="btn btn-primary" style="margin-left:10px" (click)='loadUser()'>Apply Filters</button>
+    <button type="button" class="btn btn-info" style="margin-left:10px" (click)='resetFilters()'>Reset Filter</button>
+
+    <div class="col">
+
+      <div class="btn-group float-right">
+        <label class="mr-2">Order By: </label>
+        <button type="button" name="orderBy" class="btn btn-primary" btnRadio="lastActive" [(ngModel)]="userParams.orderBy"
+          (click)='loadUser()'>
+          Last Active</button>
+        <button type="button" name="orderBy" class="btn btn-primary" btnRadio="created" [(ngModel)]="userParams.orderBy"
+          (click)='loadUser()'>
+          Newest Members</button>
+      </div>
+    </div>
+  </form>
+  <br>
+</div>
 <div class="container mt-5">
   <div class="row">
-    <div *ngFor="let user of users" class="col-lg-2 col-md-3 col-sm-6">     
-          <app-member-card [user]='user'></app-member-card>
+    <div *ngFor="let user of users" class="col-lg-2 col-md-3 col-sm-6">
+      <app-member-card [user]='user'></app-member-card>
     </div>
+  </div>
+  <div>
+    <pagination [boundaryLinks]="true" [totalItems]="pagination.totalItems" [itemsPerPage]="pagination.itemsPerPage"
+      [(ngModel)]="pagination.currentPage" (pageChanged)="pageChanged($event)" previousText="&lsaquo;" nextText="&rsaquo;"
+      firstText="&laquo;" lastText="&raquo;">
+    </pagination>
   </div>
 </div>
