@@ -1,6 +1,8 @@
+using System;
 using System.Collections.Generic;
 using System.Linq;
 using System.Threading.Tasks;
+using DatingApp.API.Helpers;
 using DatingApp.API.Models;
 using Microsoft.EntityFrameworkCore;
 
@@ -19,10 +21,42 @@ namespace DatingApp.API.Data
 
         public async Task<Photo> GetPhoto(int id) => await _context.Photos.FirstOrDefaultAsync(p => p.Id == id);
 
-        public async Task<User> GetUser(int id) => 
+        public async Task<User> GetUser(int id) =>
         await _context.Users.Include(x => x.Photos).FirstOrDefaultAsync(u => u.Id == id);
-        public async Task<IEnumerable<User>> GetUsers() => 
-        await _context.Users.Include(x => x.Photos).ToListAsync();
         public async Task<bool> SaveAll() => await _context.SaveChangesAsync() > 0;
+        public async Task<PagedList<User>> GetUsers(UserParams userParams)
+        {
+            //here we don't execute the retrival from the context, it's a sync method and we remove the wait            
+            var users = _context.Users.Include(x => x.Photos).OrderByDescending(u => u.LastActive).AsQueryable()
+            .Where(u => u.Id != userParams.UserId)
+            .Where(u => u.Gender == userParams.Gender);
+
+            if (userParams.MinAge != 18 || userParams.MaxAge != 99)
+            {
+                var minDob = DateTime.Today.AddYears(-userParams.MaxAge - 1);
+                var maxDob = DateTime.Today.AddYears(-userParams.MinAge);
+                users = users.Where(u => u.DateOfBirth > minDob && u.DateOfBirth < maxDob);
+            }
+
+            if (!string.IsNullOrEmpty(userParams.OrderBy))
+            {   
+                switch (userParams.OrderBy.ToLower())
+                {
+                    case "created":
+                        users = users.OrderByDescending(u => u.Created);
+                        break;
+
+                    default:
+                        users = users.OrderByDescending(u => u.LastActive);
+                        break;
+                }
+
+            }
+
+
+            //it's here when we create async PageList and using IQueryable we add all pagination 
+            //We get current page and returned back to the UserControler/GetUser 
+            return await PagedList<User>.CreateAsync(users, userParams.PageNumber, userParams.PageSize);
+        }
     }
 }
